2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add ipr::Auto type node.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: 'auto' is no longer a storage-class specifier in
	C++11 and up.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Move Type::Qualifier to toplevel.  Rename to
	Type_qualifier. Adjust users.

2015-12-14  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interface: Add TokenCategory, TokenValue, Token, Attribute,
	BasicAttribute, ScopedAttribute, LabeledAttribute,
	CalledAttribute, and Attribute::Visitor.
	* ipr/impl: Implement.

2015-11-29  Gabriel Dos Reis  <gdr@axiomatics.org>

	* ipr/interfce: Modify ipr::Enum to account for scoped enumerations.
	* ipr/impl: Implement modifications.

2015-11-22  Gabriel Dos Reis  <gdr@axiomatics.org>

	* Move all source header files into dedicated ipr/ directory.
	Simplifies build and installation setup.

2015-11-19  Gabriel Dos Reis  <gdr@axiomatics.org>

	* impl.hxx (impl::stable_farm<>): New.
	Use in lieu of homegrown util::slist<T>.
	(util::slist<>): Remove.
	* traversal.hxx (ipr): Remove workarounds for ancient VC++.

2010-11-13  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (expr_factory::make_phantom): Add overload taking a type
	argument. 

2010-07-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (impl::expr_factory::make_id_expr): Add new overload for Decl.

2010-05-28  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (Initializer_list): New.
	* impl.H: Provide implementation for Initializer_list.

2010-04-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (Unit::get_typename): Declare.
	* impl.H (impl::Unit::get_typename): Likewise.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* impl.H (expr_factory::make_identifier): Add overloads.
	(expr_factory::make_operator): Likewise.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interface.H (C_linkage): Remove.
	(Cxx_linkage): Likewise.